@@ -2,6 +2,7 @@ package com.kusur.Kusur.controller;
 
 import com.fasterxml.jackson.databind.MappingIterator;
 import com.fasterxml.jackson.databind.annotation.JsonAppend;
+import com.kusur.Kusur.dto.BalanceDto;
 import com.kusur.Kusur.dto.UserDetailsDto;
 import com.kusur.Kusur.model.*;
 import com.kusur.Kusur.repository.*;
@@ -9,6 +10,7 @@ import com.kusur.Kusur.security.CustomUserDetails;
 import com.kusur.Kusur.service.GroupService;
 import com.kusur.Kusur.service.NetBalanceCalculatorService;
 import com.kusur.Kusur.service.SplitExpenseService;
+import kotlin.Pair;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -42,6 +44,8 @@ public class MainController {
     @Autowired
     NetBalanceCalculatorService netBalanceCalculatorService;
     @Autowired
+    ExpenseRepository expenseRepository;
+    @Autowired
     MainController(GroupService groupService,GroupRepository groupRepository){
         this.groupService = groupService;
         this.groupRepository = groupRepository;
@@ -56,13 +60,14 @@ public class MainController {
         List<User> f1 = new ArrayList<>(friendshipRepository.findFriendshipsBySender(principal.getUser()).stream().map(f -> f.getReceiver()).toList());
         List<User> f2 = friendshipRepository.findFriendshipsByReceiver(principal.getUser()).stream().map( f -> f.getSender()).toList();
         f1.addAll(f2);
-        List<Expense> expenses = splitExpenseService.getExpenses(principal.getUser());
+        List<Expense> expenses = splitExpenseService.getAllExpenses(principal.getUser());
         System.out.println(groupMembershipRepository.findGroupMembershipByMember(principal.getUser()));
-        List<Group> groups = new ArrayList<>(groupMembershipRepository.findGroupMembershipByMember(principal.getUser()).stream().map(m -> m.getGroup()).collect(Collectors.toList()));
+        List<Pair<Group,Integer>> groups = groupMembershipRepository.findGroupMembershipByMember(principal.getUser()).stream().map(m -> m.getGroup()).map((group)-> new Pair<Group,Integer>(group,netBalanceCalculatorService.getUserGroupBalance(group,principal.getUser()).intValue())).toList();
 
-        List<String> userNetBalances = netBalanceCalculatorService.getAllBalancesAsString(principal.getUser());
-        System.out.println(userNetBalances);
-        model.addAttribute("balances",userNetBalances);
+        List<BalanceDto> userNetBalances = netBalanceCalculatorService.getAllUserBalances(principal.getUser());
+
+        System.out.println(groups);
+        model.addAttribute("userBalances",userNetBalances);
         model.addAttribute("groups",groups);
         model.addAttribute("friends", f1);
         model.addAttribute("expenses",expenses);
@@ -93,11 +98,17 @@ public class MainController {
     }
     @GetMapping("/groups/{id}")
     public String group(Model model ,@AuthenticationPrincipal CustomUserDetails principal, @PathVariable Integer id){
-
-        Group g = groupRepository.findGroupById(id).orElseThrow();
-        model.addAttribute("group",g);
+        Group groupObj = groupRepository.findGroupById(id).orElseThrow();
+        model.addAttribute("group",groupObj);
         List<UserDetailsDto> users = groupService.getGroupMembers(groupRepository.findGroupById(id).orElseThrow());
+        List<Expense> expenses = splitExpenseService.getGroupExpenses(principal.getUser(),groupObj);
+        List<BalanceDto> groupNetBalances =netBalanceCalculatorService.getGroupBalances(principal.getUser(),groupObj,false);
+        System.out.println(groupNetBalances +"\n GroupNetBalances");
         model.addAttribute("users",users);
+        model.addAttribute("expenses",expenses);
+        model.addAttribute("groupBalances",groupNetBalances);
+
         return "group";
     }
+
 }
